# SleepPlay

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/app/: default.yaml
configs/scores/: frame_diff.yaml  gradient_diff.yaml
configs/speeds/: linear.yaml  sensitive.yaml
dev/: README.md  fixtures.yaml  generate_fixtures.py
src/sleepplay/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  preprocess.py  progress.py  renderer.py  schedule.py  service.py  speeds.py  timeline.py  video.py  web.py
src/sleepplay/scores/: __init__.py  base.py  frame_diff.py  frames.py  gradient_diff.py  registry.py
tests/: config_helpers.py  test_cli.py  test_config.py  test_dev_fixtures.py  test_frame_diff.py  test_gradient_diff.py  test_pipeline.py  test_preprocess.py  test_registry.py  test_renderer.py  test_schedule.py  test_service.py  test_speeds.py  test_video.py  test_web.py  video_helpers.py
