[project]
name = "sleepplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "seaborn>=0.13.2",
    "sse-starlette>=3.4.4",
]

[project.scripts]
sleepplay = "sleepplay.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
